<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <ImageView
                    android:id="@+id/favBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/fav_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_margin="16dp"
                android:background="@drawable/grey_bg"
                android:padding="16dp" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dotIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                app:dotsColor="@color/grey"
                app:dotsCornerRadius="8dp"
                app:dotsSize="6dp"
                app:dotsSpacing="2dp"
                app:dotsWidthFactor="2.5"
                android:layout_gravity="center"
                app:selectedDotColor="@color/purple"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorList"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="9dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_example"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/escolha_o_tamanho"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/star" />

                <TextView
                    android:id="@+id/ratingTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textColor="@color/black" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sizeList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_margin="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buyNowBtn"
                    style="@android:style/Widget.Button"
                    android:background="@drawable/purple_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="Comprar agora"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    />

                <ImageButton
                    android:id="@+id/cardBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/grey_bg"
                    app:srcCompat="@drawable/btn_2"
                    app:tint="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>